--- a/requirements.txt
+++ b/requirements.txt
@@ -1,79 +1,47 @@
-aiohttp==3.9.1
-aiosignal==1.3.1
-annotated-types==0.6.0
-anyio==4.2.0
-async-timeout==4.0.3
-attrs==23.2.0
-beautifulsoup4==4.12.2
-certifi==2023.11.17
-charset-normalizer==3.3.2
-click==8.1.7
-dataclasses-json==0.6.3
-discord==2.3.2
-discord.py==2.3.2
-exceptiongroup==1.2.0
-faiss-cpu==1.7.4
-faiss-gpu==1.7.2
-filelock==3.13.1
-frozenlist==1.4.1
-fsspec==2023.12.2
-greenlet==3.0.3
-huggingface-hub==0.20.2
-idna==3.6
-install==1.3.5
-Jinja2==3.1.2
-joblib==1.3.2
-jsonpatch==1.33
-jsonpointer==2.4
-langchain==0.1.0
-langchain-community==0.0.9
-langchain-core==0.1.7
-langsmith==0.0.77
-MarkupSafe==2.1.3
-marshmallow==3.20.1
-mpmath==1.3.0
-multidict==6.0.4
-mypy-extensions==1.0.0
-networkx==3.2.1
-nltk==3.8.1
-numpy==1.26.3
-nvidia-cublas-cu12==12.1.3.1
-nvidia-cuda-cupti-cu12==12.1.105
-nvidia-cuda-nvrtc-cu12==12.1.105
-nvidia-cuda-runtime-cu12==12.1.105
-nvidia-cudnn-cu12==8.9.2.26
-nvidia-cufft-cu12==11.0.2.54
-nvidia-curand-cu12==10.3.2.106
-nvidia-cusolver-cu12==11.4.5.107
-nvidia-cusparse-cu12==12.1.0.106
-nvidia-nccl-cu12==2.18.1
-nvidia-nvjitlink-cu12==12.3.101
-nvidia-nvtx-cu12==12.1.105
-packaging==23.2
-pillow==10.2.0
-pydantic==2.5.3
-pydantic_core==2.14.6
-PyYAML==6.0.1
-regex==2023.12.25
-requests==2.31.0
-safetensors==0.4.1
-scikit-learn==1.3.2
-scipy==1.11.4
-sentence-transformers==2.2.2
-sentencepiece==0.1.99
-sniffio==1.3.0
-soupsieve==2.5
-SQLAlchemy==2.0.25
-sympy==1.12
-tenacity==8.2.3
-threadpoolctl==3.2.0
-tokenizers==0.15.0
-torch==2.1.2
-torchvision==0.16.2
-tqdm==4.66.1
-transformers==4.36.2
-triton==2.1.0
-typing-inspect==0.9.0
-typing_extensions==4.9.0
-urllib3==2.1.0
-yarl==1.9.4
+# ArquimedesAI v1.2 - Modern Tech Stack Requirements
+# Based on latest stable versions (October 2025)
+
+# Core Framework
+langchain>=0.3.0
+langchain-core>=0.3.0
+langchain-community>=0.3.0
+
+# Vector Store & Embeddings
+langchain-qdrant>=0.2.0  # Official Qdrant integration (replaces deprecated langchain_community.vectorstores.Qdrant)
+qdrant-client>=1.12.0
+langchain-huggingface>=0.1.0
+
+# Retrieval & Reranking
+rank-bm25>=0.2.2  # BM25 sparse retrieval for hybrid search
+sentence-transformers>=2.2.0  # Cross-encoder reranking
+
+# Document Processing
+docling>=2.0.0
+langchain-docling>=0.1.0  # Official Docling integration with HybridChunker
+
+# LLM Integration
+langchain-ollama>=0.3.10  # Ollama integration (replaces deprecated langchain_community.llms.Ollama)
+
+# Configuration
+pydantic>=2.10.0
+pydantic-settings>=2.6.0
+python-dotenv>=1.0.0
+
+# Discord Bot
+discord.py>=2.4.0
+
+# CLI
+typer>=0.15.0
+rich>=13.0.0
+
+# Text Processing
+langchain-text-splitters>=0.3.0
+
+# Optional: Testing
+pytest>=8.0.0
+pytest-asyncio>=0.24.0
+
+# Optional: Code Quality
+ruff>=0.8.0
+mypy>=1.13.0
+
