feat: Phase 1 v1.4 - Conversational memory + Gemma3 upgrade
Major Features:
- Add conversational memory with RunnableWithMessageHistory
- Add Pydantic schemas for structured citations (foundation)
- Migrate to ChatOllama for structured output support
- Add --conversational flag to CLI chat command

Model Upgrade:
- Update all documentation: Gemma2:1b → Gemma3:4b (gemma3:latest)
- Change default model in settings.py
- Update 47+ references across documentation files

Configuration:
- Add v1.4 settings to .env.example and .env.production
- Add conversational memory settings (enable_conversation_memory, max_history_messages)
- Add structured citations settings (use_structured_citations, citation_style)
- Update .gitignore to exclude dev artifacts

Implementation Details:
- core/rag_chain.py: Add history_store, get_session_history(), create_conversational_chain()
- cli.py: Session tracking with UUID, turn counter, conversational mode support
- prompts/templates.py: Citation, QuotedAnswer, CitedAnswer Pydantic models
- settings.py: Add debug logging on module import

Breaking Changes: None (all v1.4 features are opt-in)
Migration: Run 'ollama pull gemma3:latest' to upgrade model
Testing: Use 'python cli.py chat --conversational' to test new mode

--- a/.env.example
+++ b/.env.example
@@ -39,8 +39,28 @@ ARQ_DOCLING_TABLE_MODE=accurate  # Table extraction: fast or accurate
 
 # Ollama LLM
 ARQ_OLLAMA_BASE=http://localhost:11434
-ARQ_OLLAMA_MODEL=gemma2:1b
+ARQ_OLLAMA_MODEL=gemma3:latest
 ARQ_OLLAMA_TEMPERATURE=0.3
+
+# Conversational Memory (v1.4)
+ARQ_ENABLE_CONVERSATION_MEMORY=false  # Set to true to enable in-session conversation history
+ARQ_MAX_HISTORY_MESSAGES=20           # Message history limit for conversational mode
+
+# Structured Citations (v1.4)
+ARQ_USE_STRUCTURED_CITATIONS=false  # Set to true for Pydantic schema-based citations
+ARQ_CITATION_STYLE=quoted           # Options: quoted (with verbatim quotes) or id (source IDs only)
 
 # Discord Bot
 ARQ_DISCORD_TOKEN=your_discord_bot_token_here
+
+# Development Notes:
+# - Development defaults optimize for speed over quality
+# - HNSW: Lower M/EF for faster queries, on_disk=false for speed
+# - Reranking disabled by default (set ARQ_RERANK_ENABLED=true for production-like testing)
+# - OCR disabled by default (set ARQ_DOCLING_OCR=true for scanned PDFs)
+# - Requires manual Ollama setup: ollama pull gemma3:latest
+# 
+# Phase 1 (v1.4) Features:
+# - Conversational memory: Enable with ARQ_ENABLE_CONVERSATION_MEMORY=true
+# - Use --conversational flag in CLI: python cli.py chat --conversational
+# - Structured citations: Enable with ARQ_USE_STRUCTURED_CITATIONS=true
