--- a/.env.production
+++ b/.env.production
@@ -41,8 +41,16 @@ ARQ_DOCLING_TABLE_MODE=accurate  # Use accurate TableFormer model for best table
 
 # Ollama LLM
 ARQ_OLLAMA_BASE=http://localhost:11434
-ARQ_OLLAMA_MODEL=gemma2:1b
+ARQ_OLLAMA_MODEL=gemma3:latest
 ARQ_OLLAMA_TEMPERATURE=0.3
+
+# Conversational Memory (v1.4)
+ARQ_ENABLE_CONVERSATION_MEMORY=true
+ARQ_MAX_HISTORY_MESSAGES=20
+
+# Structured Citations (v1.4)
+ARQ_USE_STRUCTURED_CITATIONS=true
+ARQ_CITATION_STYLE=quoted  # Options: quoted (with verbatim quotes) or id (source IDs only)
 
 # Discord Bot
 ARQ_DISCORD_TOKEN=your_discord_bot_token_here
@@ -52,4 +60,9 @@ ARQ_DISCORD_TOKEN=your_discord_bot_token_here
 # - HNSW optimization: Better retrieval accuracy with lower memory (on_disk=true)
 # - Reranking adds ~100-300ms latency but significantly improves relevance
 # - Total model downloads on first run: ~3GB (BGE-M3 + reranker + Ollama)
-# - Requires manual Ollama setup: ollama pull gemma2:1b
+# - Requires manual Ollama setup: ollama pull gemma3:latest
+
+# Phase 1 (v1.4) Notes:
+# - Conversational memory: In-session conversation history for follow-up questions
+# - Structured citations: Pydantic schemas for reliable citation extraction
+# - Use --conversational flag in CLI: python cli.py chat --conversational
