perf: Increase reranker output to better utilize 128K context
- Increase ARQ_RERANK_TOP_N from 3 to 5 for better Gemma3 context utilization
- More chunks reach LLM while maintaining reranker quality filtering
- Updated settings.py default, .env.example, and .env.production
- Low-risk optimization with high impact potential

--- a/.env.example
+++ b/.env.example
@@ -31,7 +31,7 @@ ARQ_DENSE_WEIGHT=0.6  # Semantic similarity weight
 # Cross-Encoder Reranking (v1.2)
 ARQ_RERANK_ENABLED=false  # Set to true for better quality (slower)
 ARQ_RERANK_MODEL=BAAI/bge-reranker-v2-m3
-ARQ_RERANK_TOP_N=3    # Final results after reranking
+ARQ_RERANK_TOP_N=5    # Final results after reranking (increased for better 128K context utilization)
 
 # Docling Configuration (v1.3)
 ARQ_DOCLING_OCR=false        # Enable OCR for scanned PDFs/images (slower, set true for production)
