--- a/.env.production
+++ b/.env.production
@@ -33,7 +33,7 @@ ARQ_DENSE_WEIGHT=0.6  # Semantic similarity weight
 # Cross-Encoder Reranking - ENABLED for best quality
 ARQ_RERANK_ENABLED=true
 ARQ_RERANK_MODEL=BAAI/bge-reranker-v2-m3
-ARQ_RERANK_TOP_N=3    # Final top results after reranking
+ARQ_RERANK_TOP_N=5    # Final top results after reranking (increased for better 128K context utilization)
 
 # Docling Configuration (v1.3) - ENABLED for best quality
 ARQ_DOCLING_OCR=true         # Enable OCR for scanned PDFs/images
