--- a/.env.example
+++ b/.env.example
@@ -46,6 +46,9 @@ ARQ_OLLAMA_TEMPERATURE=0.3
 ARQ_ENABLE_CONVERSATION_MEMORY=false  # Set to true to enable in-session conversation history
 ARQ_MAX_HISTORY_MESSAGES=20           # Message history limit for conversational mode
 
+# Semantic Routing (v2.0)
+ARQ_DISABLE_ROUTING=false  # Set to true to disable automatic domain routing (default: routing enabled)
+
 # Structured Citations (v1.4)
 ARQ_USE_STRUCTURED_CITATIONS=false  # Set to true for Pydantic schema-based citations
 ARQ_CITATION_STYLE=quoted           # Options: quoted (with verbatim quotes) or id (source IDs only)
