--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,8 @@
-# ArquimedesAI Configuration
-# Copy this file to .env and update with your values
+# ArquimedesAI v2.0 Configuration Template
+# Copy this file to .env and customize for your deployment
+#
+# This template provides DEVELOPMENT-OPTIMIZED defaults for fast iteration and testing.
+# For PRODUCTION deployments, consider enabling quality features (see comments below).
 
 # Paths
 ARQ_DATA_DIR=./data
@@ -57,13 +60,22 @@ ARQ_CITATION_STYLE=quoted           # Options: quoted (with verbatim quotes) or 
 ARQ_DISCORD_TOKEN=your_discord_bot_token_here
 
 # Development Notes:
-# - Development defaults optimize for speed over quality
+# - Development defaults optimize for speed over quality (fast iteration, lower resources)
 # - HNSW: Lower M/EF for faster queries, on_disk=false for speed
-# - Reranking disabled by default (set ARQ_RERANK_ENABLED=true for production-like testing)
-# - OCR disabled by default (set ARQ_DOCLING_OCR=true for scanned PDFs)
+# - Reranking disabled by default (enable for production-like testing)
+# - OCR disabled by default (enable for scanned PDFs)
 # - Requires manual Ollama setup: ollama pull gemma3:latest
 # 
-# Phase 1 (v1.4) Features:
-# - Conversational memory: Enable with ARQ_ENABLE_CONVERSATION_MEMORY=true
-# - Use --conversational flag in CLI: python cli.py chat --conversational
+# Production Optimization:
+# For best quality, consider these production settings in your .env:
+#   ARQ_QDRANT_HNSW_M=32              # Better accuracy
+#   ARQ_QDRANT_HNSW_EF_CONSTRUCT=256  # Better index quality
+#   ARQ_QDRANT_ON_DISK=true           # Lower memory usage
+#   ARQ_RERANK_ENABLED=true           # Better relevance
+#   ARQ_DOCLING_OCR=true              # Handle scanned documents
+# 
+# v2.0 Features:
+# - Semantic routing: Enable with --enable-routing flag in CLI
+# - Conversational memory: Enable with ARQ_ENABLE_CONVERSATION_MEMORY=true and --conversational flag
 # - Structured citations: Enable with ARQ_USE_STRUCTURED_CITATIONS=true
+# - GTM domain expertise: Automatic when routing enabled
