docs: Fix routing documentation - clarify always-on behavior
🔧 Critical Documentation Fixes:
- Remove all --enable-routing flag references (flag doesn't exist)
- Clarify routing is ENABLED BY DEFAULT in v2.0
- Update migration notes: use ARQ_DISABLE_ROUTING=true to disable
- Fix CLI examples to remove non-existent routing flags

📝 Files Updated:
- README.md: 8 locations corrected (--enable-routing removed)
- CHANGELOG.md: Updated v2.0.0 feature description and migration notes
- .env.example: Clarified routing is on by default

✅ Result:
- All user-facing documentation now accurate
- No more confusion about non-existent CLI flags
- Clear instructions on disabling routing if needed

This fixes critical user-facing documentation misalignment where docs
said routing was opt-in via --enable-routing flag, but implementation
has routing always-on by default (controlled via ARQ_DISABLE_ROUTING
environment variable).

--- a/.env.example
+++ b/.env.example
@@ -75,7 +75,7 @@ ARQ_DISCORD_TOKEN=your_discord_bot_token_here
 #   ARQ_DOCLING_OCR=true              # Handle scanned documents
 # 
 # v2.0 Features:
-# - Semantic routing: Enable with --enable-routing flag in CLI
+# - Semantic routing: ENABLED BY DEFAULT (set ARQ_DISABLE_ROUTING=true to disable)
 # - Conversational memory: Enable with ARQ_ENABLE_CONVERSATION_MEMORY=true and --conversational flag
 # - Structured citations: Enable with ARQ_USE_STRUCTURED_CITATIONS=true
-# - GTM domain expertise: Automatic when routing enabled
+# - GTM domain expertise: Automatic with routing enabled
